--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-mocks": "^1.4.0",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
+    "angularfire": "^1.1.3",
     "babel": "^5.0.12",
     "bluebird": "^2.9.34",
     "body-parser": "^1.12.0",
@@ -26,13 +27,14 @@
     "cookie-parser": "^1.3.4",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
+    "firebase": "^2.4.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
+    "gulp-cssnano": "^2.1.0",
     "gulp-eslint": "^0.14.0",
     "gulp-istanbul": "^0.9.0",
     "gulp-livereload": "^3.7.0",
-    "gulp-minify-css": "^0.4.6",
     "gulp-mocha": "^2.0.0",
     "gulp-ng-annotate": "^0.5.2",
     "gulp-notify": "^2.2.0",
