--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "angular": "^1.5.0-beta.0",
-    "angular-animate": "^1.4.7",
+    "angular": "^1.5.6",
+    "angular-animate": "^1.5.6",
     "angular-mocks": "^1.4.0",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
-    "angularfire": "^1.1.3",
+    "angularfire": "^2.0.1",
     "babel": "^5.0.12",
     "bluebird": "^2.9.34",
     "body-parser": "^1.12.0",
